fix: z-index issue between an open popover and an active composing marker

--- a/src/assets/stylesheets/variables/_variables.indexes.scss
+++ b/src/assets/stylesheets/variables/_variables.indexes.scss
@@ -13,3 +13,4 @@
 $index-foreground-primary: 10000;
 $index-foreground-secondary: 1000;
 $index-foreground-tertiary: 100;
+$index-foreground-quaternary: 10;
